--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
         <item>Образование</item>
         <item>Компьютеры</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
